syntax = "proto3";
package zetacore.crosschain;

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

message PermissionFlags {
  bool isInboundEnabled = 1;
}
